kube_resources/simple_app/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: simple
